--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -76,6 +76,15 @@ on post-fs-data
     mkdir /data/vendor/nfc 0770 nfc nfc
     mkdir /data/vendor/thermal 0771 root system
     mkdir /data/vendor/thermal/config 0771 root system
+    
+    # Enable suspend to RAM
+    write /sys/power/mem_sleep "deep"
+
+    # Create fingerprint related directory
+    mkdir /data/vendor/fpc 0770 system system
+    mkdir /data/vendor/fpdump 0770 system system
+    mkdir /data/vendor/goodix 0770 system system
+    mkdir /mnt/vendor/persist/goodix 0770 system system
 
 on boot
     start rmt_storage
@@ -98,6 +107,10 @@ on boot
     # Set xiaomi touch permissions
     chown system system /dev/xiaomi-touch
     chmod 0660 /dev/xiaomi-touch
+    
+     # Smart Charging
+    chown system system /sys/class/power_supply/battery/charging_enabled
+    chmod 0666 /sys/class/power_supply/battery/charging_enabled
 
 on property:sys.boot_completed=1
     # Set allocstall_threshold to 0
